Prevent CardAmount to spread out too much

--- a/src/components/Folder/Folder.scss
+++ b/src/components/Folder/Folder.scss
@@ -46,7 +46,7 @@
     }
 
     .folder-card-amount {
-      min-width: 10vw;
+      min-width: 5rem;
       width: auto;
     }
   }
